[package]
name = "deeper"
version = "0.0.1"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 2
incremental = true
lto = false
#lto = "thin"

[workspace]
members = [
    "src/physics",
    "src/entity_smith",
    "src/transforms",
    "src/world_gen",
    "src/graphics",
    "src/components",
    "src/input",
]

[dependencies]

# internal
physics = { path = "src/physics" }
transforms = { path = "src/transforms" }
entity-smith = { path = "src/entity_smith" }
graphics = { path = "src/graphics" }
world_gen = { path = "src/world_gen" }
components = { path = "src/components" }
input = { path = "src/input" }

# misc
itertools = "0.10.0"
rayon = "*"
futures = "0.3.13"
winit = "0.24.0"

# math
cgmath = "0.18.0"
rand = "0.8.3"


# loader
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }

# ECS
legion = "0.4"
crossbeam-channel = "0.5.0"
