[package]
name = "deeper"
version = "0.0.1"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 2
incremental = true
lto = false
#lto = "thin"

[workspace]
members = [
    "engine/physics",
    "engine/entity_smith",
    "engine/transforms",
    "engine/graphics",
    "engine/input",
    "engine/application",
    "engine/assman",
]

[dependencies]

# internal
physics = { path = "engine/physics" }
transforms = { path = "engine/transforms" }
entity_smith = { path = "engine/entity_smith" }
graphics = { path = "engine/graphics" }
input = { path = "engine/input" }
application = { path = "engine/application" }
assman = { path = "engine/assman" }

# misc
itertools = "0.10.0"
rayon = "1.5.0"
futures = "0.3.13"
winit = "0.24.0"
ena = "0.14.0"

# math
cgmath = "0.18.0"
rand = "0.8.3"

# loader
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }

# ECS
legion = "0.4"
crossbeam-channel = "0.5.0"
