[package]
name = "application"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

legion = "0.4.0"
enum-map = "1.1.1"
itertools = "0.10.0"