[package]
name = "graphics"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# internal
entity_smith = { path = "../entity_smith" }
transforms = { path = "../transforms" }

# misc
itertools = "0.10.0"
legion = { version = "0.4.0", features = ["extended-tuple-impls"] }
slotmap = "1.0.2"

wgpu = "0.7.0"
cgmath = "0.18.0"
winit = "0.24.0"
lazy_static = "1.4.0"
imgui = "0.7.0"
imgui-wgpu = "0.14.0"
imgui-winit-support = "0.7.0"
image = "0.23.14"

bytemuck = { version = "1.5.1", features = ["derive"] }
serde = { version = "1.0.123", features = ["derive"] }
