[package]
name = "misc"
version = "0.1.0"
authors = ["jokulhaups <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# internal
graphics = { path = "../graphics" }
input = { path = "../input" }

legion = "0.4.0"
rand = "0.8.3"
cgmath = "0.18.0"
