[package]
name = "physics"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# internal
entity_smith = { path = "../entity_smith" }
transforms = { path = "../transforms" }

# physics
nalgebra = "0.24.1"
ncollide2d = "0.27.0"
nphysics2d = "0.19.0"

# ECS
legion = "0.4"
crossbeam-channel = "0.5.0"

cgmath = "0.18.0"
