[package]
name = "transforms"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
entity_smith = { path = "../entity_smith" }

legion = "0.4"
cgmath = "0.18.0"
