[package]
name = "world_gen"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# internal
components = { path = "../components"}
transforms = { path = "../transforms"}
graphics = { path = "../graphics"}
entity_smith = { path = "../entity_smith"}
physics = { path = "../physics"}

rand = "0.8.3"
ena = "0.14.0"
cgmath = "0.18.0"
legion = "0.4.0"
itertools = "0.10.0"
