[package]
name = "application"
version = "0.1.0"
authors = ["Arnaldur Bjarnason <aarnaldur@gmail.com>", "Jökull Reynisson <jokullmani12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#internal
graphics = { path = "../graphics" }
entity_smith = { path = "../entity_smith" }
physics = { path = "../physics" }
transforms = { path = "../transforms" }
input = { path = "../input" }
systems = { path = "../systems" }
world_gen = { path = "../world_gen" }
assman = { path = "../assman" }
misc = { path = "../misc" }

winit = "0.24.0"
legion = "0.4.0"