[package]
name = "transforms"
version = "0.1.0"
authors = ["arnfaldur <aarnaldur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
entity-smith = { path = "../entity_smith" }

# ECS
legion = "0.4"

cgmath = "0.18.0"
